# tp-composant-ia

./: 404.html  README.md  index.html  objects.inv  pyproject.toml
.github/workflows/: docs.yml
api_reference/: index.html
architecture/: index.html
artefacts/: index.html
contributing/: index.html
datasets/: index.html
docs/: api_reference.md  contributing.md
docs/architecture/: index.md
docs/artefacts/: index.md  index_backup.md
docs/datasets/: index.md
docs/kpi/: index.md  index_backup.md
docs/static/stylesheets/: extra.css
javascripts/: mermaid.js
kpi/: index.html
search/: search_index.json
tp-composant-ia/: .gitignore  CHANGELOG.md  GEMINI.md  LICENSE.txt  README.md  SECURITY.md  TODO.md  mkdocs.yml  noxfile.py  pyproject.toml
tp-composant-ia/.github/workflows/: docs.yml
tp-composant-ia/docs/: user_guide.md
tp-composant-ia/docs/architecture/: archi_laura.md  graph LR.mmd  graph LR2.mmd  index.md
tp-composant-ia/docs/artefacts/: artefacts.md  index.md
tp-composant-ia/docs/datasets/: index.md
tp-composant-ia/docs/kpi/: index LK.md  index.md
tp-composant-ia/scripts/: docs_hooks.py
user_guide/: index.html
